added test support; refwritten read2d method